objects/Case_QA_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Action_Date__c</fullName>
        <label>Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case_QA_Answers</relationshipLabel>
        <relationshipName>Case_QA_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TemplateID__c</fullName>
        <label>TemplateID</label>
        <type>TextArea</type>
    </fields>
    <label>Case_QA_Answer</label>
    <nameField>
        <displayFormat>CASQA-A-{000000000}</displayFormat>
        <label>Case_QA_Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case_QA_Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>